pod-with-image-from-private-registry.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-image-from-private-registry
spec:
  containers:
    - name: pod
      image: nginx
  imagePullSecrets:
    - name: reg-cred
