pod-with-resource-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-resource-limits
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 8080
      resources:
        requests:
          memory: "1Gi"
          cpu: 1
        limits:
          memory: "2Gi"
          cpu: 2
