pod-with-secret-as-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp
  labels:
    app: webapp
spec:
  containers:
    - name: simple-webapp
      image: simple-webapp
  volumes:
    - name: app-secret-volume
      secret:
        secretName: app-secret
