pod1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    app: myapp
    env: production

spec:
  containers:
    - name: nginx
      image: nginx
